ocp311/bookinfo/f5-cluster-deployment-route_1.11.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: k8s-bigip-ctlr
      containers:
        - name: k8s-bigip-ctlr
          image: "somanchit/k8s-bigip-ctlr:1.11-cf3"
          imagePullPolicy: IfNotPresent
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-url=10.69.32.29",
            "--bigip-partition=openshift",
            "--namespace=httpbin",
            "--pool-member-type=cluster",
            "--manage-routes=true",
            "--route-vserver-addr=10.69.32.100",
            "--route-http-vserver=okd-http-dc1",
            "--route-https-vserver=okd-https-dc1",
            "--openshift-sdn-name=/Common/osp311-1_tunnel",
            "--insecure=true",
            "--agent=as3"
          ]
