ocp311/bookinfo/bookinfo-route-reencrypt-ssl.yaml
apiVersion: v1
kind: Route
metadata:
    labels:
      name: f5-bookinfo-route-reencrypt-ssl
    name: f5-bookinfo-route-reencrypt-ssl
    namespace: bookinfo
    annotations:
      # annotations
      # default clientssl profile
      # default serverssl profile
      virtual-server.f5.com/clientssl: /Common/clientssl
      virtual-server.f5.com/serverssl: /Common/serverssl
      # health monitor
      virtual-server.f5.com/health: |
        [
          {
            "path": "bookinfo.f5se.io/",
            "send": "HTTP GET /",
            "monitor_type": "https",
            "interval": 5,
            "timeout": 16
          }
        ]
spec:
    host: bookinfo.f5se.io
    path: "/"
    port:
      targetPort: 8443
    tls:
      termination: reencrypt
    to:
      kind: Service
      name: productpage
